--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,42 @@
-baseURL = 'http://example.org/'
+baseURL = '/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'cwille97'
 theme = 'terminal'
+paginate = 5
+
+[params]
+    themeColor = 'blue'
+    showLanguageSelector = false
+    fullWidthTheme = false
+    centerTheme = false
+    telemetryDeckAppId = '349FFC3F-6F1F-4D0A-BACE-F0DA32B90954'
+
+[languages]
+  [languages.en]
+    languageName = "English"
+    title = "cwille97"
+    subtitle = "My website"
+    owner = "cwille97"
+    keywords = ""
+    copyright = ""
+    menuMore = "Show more"
+    readMore = "Read more"
+    readOtherPosts = "Read other posts"
+    newerPosts = "Newer posts"
+    olderPosts = "Older posts"
+    missingContentMessage = "Page not found..."
+    missingBackButtonLabel = "Back to home page"
+
+    [languages.en.params.logo]
+      logoText = "cwille97"
+      logoHomeLink = "/"
+
+    [languages.en.menu]
+      [[languages.en.menu.main]]
+        identifier = "about"
+        name = "About"
+        url = "/posts/about"
+      [[languages.en.menu.main]]
+        identifier = "showcase"
+        name = "Showcase"
+        url = "/showcase"
